update home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -78,7 +78,7 @@ development.
     
     </div>
     <div class="cv">
-        <a href="assets/resumeluka.pdf" download class="downloadcv">
+        <a href="assets/resume.pdf" download class="downloadcv">
      <button>DOWNLOAD CV</button>
         </a>
     <a href="#" class="conta" (click)="openForm()">CONTACT ME</a>
