--- a/src/app/experience/experience.component.css
+++ b/src/app/experience/experience.component.css
@@ -232,22 +232,22 @@ section {
     grid-template-columns: 1fr;
   }
    .slide-0 {
-    animation: slideFromLeft 0.8s ease-out forwards;
+    /* animation: slideFromLeft 0.8s ease-out forwards; */
     animation-delay: 0.2s;
   }
 
   .slide-1 {
-    animation: slideFromRight 0.8s ease-out forwards;
+    /* animation: slideFromRight 0.8s ease-out forwards; */
     animation-delay: 0.5s;
   }
 
   .slide-2 {
-    animation: slideFromLeft 0.8s ease-out forwards;
+    /* animation: slideFromLeft 0.8s ease-out forwards; */
     animation-delay: 0.8s;
   }
 
   .slide-3 {
-    animation: slideFromRight 0.8s ease-out forwards;
+    /* animation: slideFromRight 0.8s ease-out forwards; */
     animation-delay: 1.1s;
   }
 }
