--- a/src/app/experience/experience.component.css
+++ b/src/app/experience/experience.component.css
@@ -167,44 +167,44 @@ section {
 /* Keyframes */
 @keyframes slideFromLeft {
   from {
-    left: -100px;
+    transform: translateX(-100px);
     opacity: 0;
   }
   to {
-    left: 0;
-    opacity: 1;
-  }
-}
-
-@keyframes slideFromTop {
-  from {
-    top: -100px;
-    opacity: 0;
-  }
-  to {
-    top: 0;
+    transform: translateX(0);
     opacity: 1;
   }
 }
 
 @keyframes slideFromRight {
   from {
-    left: 100px;
+    transform: translateX(100px);
     opacity: 0;
   }
   to {
-    left: 0;
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideFromTop {
+  from {
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
     opacity: 1;
   }
 }
 
 @keyframes slideFromBottom {
   from {
-    top: 100px;
+    transform: translateY(100px);
     opacity: 0;
   }
   to {
-    top: 0;
+    transform: translateY(0);
     opacity: 1;
   }
 }
@@ -232,22 +232,22 @@ section {
     grid-template-columns: 1fr;
   }
    .slide-0 {
-    /* animation: slideFromLeft 0.8s ease-out forwards; */
+    animation: slideFromLeft 0.8s ease-out forwards;
     animation-delay: 0.2s;
   }
 
   .slide-1 {
-    /* animation: slideFromRight 0.8s ease-out forwards; */
+    animation: slideFromRight 0.8s ease-out forwards;
     animation-delay: 0.5s;
   }
 
   .slide-2 {
-    /* animation: slideFromLeft 0.8s ease-out forwards; */
+    animation: slideFromLeft 0.8s ease-out forwards;
     animation-delay: 0.8s;
   }
 
   .slide-3 {
-    /* animation: slideFromRight 0.8s ease-out forwards; */
+    animation: slideFromRight 0.8s ease-out forwards;
     animation-delay: 1.1s;
   }
 }
